<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:key="calibration_factor"
        app:title="@string/pref_calibration_factor"
        app:defaultValue="0.0185"
        app:useSimpleSummaryProvider="true"
        android:inputType="numberDecimal" />

    <EditTextPreference
        app:key="sample_size"
        app:title="@string/pref_sample_size"
        app:defaultValue="10"
        app:useSimpleSummaryProvider="true"
        android:inputType="number" />

    <EditTextPreference
        app:key="light_hours"
        app:title="@string/pref_light_hours"
        app:summary="@string/pref_light_hours_summary"
        app:defaultValue="12"
        app:useSimpleSummaryProvider="true"
        android:inputType="number"
        android:hint="@string/hint_number" />

    <SwitchPreferenceCompat
        app:key="dli_alerts_enabled"
        app:title="@string/pref_dli_alerts"
        app:defaultValue="false"
        app:summary="@string/pref_dli_alerts_summary" />

    <EditTextPreference
        app:key="dli_alert_threshold"
        app:title="@string/pref_dli_alert_threshold"
        app:defaultValue="3"
        app:useSimpleSummaryProvider="true"
        app:dependency="dli_alerts_enabled"
        android:inputType="number"
        app:summary="@string/pref_dli_alert_threshold_summary" />

    <SwitchPreferenceCompat
        app:key="auto_backup"
        app:title="@string/pref_auto_backup"
        app:defaultValue="false"
        app:summary="@string/pref_auto_backup_summary" />

    <ListPreference
        app:key="theme"
        app:title="@string/pref_theme"
        app:entries="@array/theme_entries"
        app:entryValues="@array/theme_values"
        app:defaultValue="system" />

</PreferenceScreen>
