<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lux_raw_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/lux_raw_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lux_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lux_placeholder"
        app:layout_constraintStart_toStartOf="@id/lux_raw_value"
        app:layout_constraintTop_toBottomOf="@id/lux_raw_value" />

    <TextView
        android:id="@+id/ppfd_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ppfd_placeholder"
        app:layout_constraintStart_toStartOf="@id/lux_value"
        app:layout_constraintTop_toBottomOf="@id/lux_value" />

    <TextView
        android:id="@+id/dli_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dli_placeholder"
        app:layout_constraintStart_toStartOf="@id/ppfd_value"
        app:layout_constraintTop_toBottomOf="@id/ppfd_value" />

    <Spinner
        android:id="@+id/plant_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/dli_value"
        app:layout_constraintTop_toBottomOf="@id/dli_value" />

    <Button
        android:id="@+id/measurement_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/measurement_save"
        app:layout_constraintStart_toStartOf="@id/dli_value"
        app:layout_constraintTop_toBottomOf="@id/plant_selector" />

    <TextView
        android:id="@+id/location_check_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/location_check_placeholder"
        app:layout_constraintStart_toStartOf="@id/measurement_save_button"
        app:layout_constraintTop_toBottomOf="@id/measurement_save_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
